studylinker_iac/kuberyml/ingress/external_dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: k8s.gcr.io/external-dns/external-dns:v0.14.0
          args:
            # AWS Route53 provider 사용
            - --provider=aws
            # Ingress & Service 모두 감시
            - --source=ingress
            - --source=service
            # 레코드 충돌 방지용 TXT 레코드
            - --registry=txt
            - --txt-owner-id=gachonlink-eks
            # 관리할 도메인 (필요한 도메인만 필터링)
            - --domain-filter=studylink.click
            - --domain-filter=gachon.studylink.click
            # 삭제 방지 (안전)
            - --policy=upsert-only
            # 공개 Hosted Zone만 대상
            - --aws-zone-type=public
